@@ -34,24 +34,29 @@ CONFIG.Events = {
 
 	"CAT_SWING",
 		"SWING_DAMAGE", -- normal
+		"SWING_DAMAGE_MULTISTRIKE", -- normal (fake event)
 		"SWING_MISSED", -- normal
 		"SPELL_EXTRA_ATTACKS", -- normal
 	"SPACE",
 		"RANGE_DAMAGE", -- normal
+		"RANGE_DAMAGE_MULTISTRIKE", -- normal (fake event)
 		"RANGE_MISSED", -- normal
 
 
 	"CAT_SPELL",
 		"SPELL_DAMAGE", -- normal
-		"SPELL_DAMAGE_CRIT", -- normal
-		"SPELL_DAMAGE_NONCRIT", -- normal
+		"SPELL_DAMAGE_MULTISTRIKE", -- normal (fake event)
+		"SPELL_DAMAGE_CRIT", -- normal (fake event)
+		"SPELL_DAMAGE_NONCRIT", -- normal (fake event)
 		"SPELL_MISSED", -- normal
-		"SPELL_REFLECT", -- normal
+		"SPELL_REFLECT", -- normal (fake event)
+
 	"SPACE",
 		"SPELL_CREATE", -- normal
 		"SPELL_SUMMON", -- normal
 	"SPACE",
 		"SPELL_HEAL", -- normal
+		"SPELL_HEAL_MULTISTRIKE", -- normal (fake event)
 		"SPELL_RESURRECT", -- normal
 	"SPACE",
 		"SPELL_ENERGIZE", -- normal
@@ -77,10 +82,12 @@ CONFIG.Events = {
 		"SPELL_AURA_BROKEN_SPELL",-- extraSpellID/name
 	"SPACE",
 		"SPELL_PERIODIC_DAMAGE",
+		"SPELL_PERIODIC_DAMAGE_MULTISTRIKE", -- normal (fake event)
 		"SPELL_PERIODIC_DRAIN",
 		"SPELL_PERIODIC_ENERGIZE",
 		"SPELL_PERIODIC_LEECH",
 		"SPELL_PERIODIC_HEAL",
+		"SPELL_PERIODIC_HEAL_MULTISTRIKE", -- normal (fake event)
 		"SPELL_PERIODIC_MISSED",
 
 
@@ -90,7 +97,7 @@ CONFIG.Events = {
 		"SPELL_CAST_SUCCESS",
 	"SPACE",
 		"SPELL_INTERRUPT",-- extraSpellID/name
-		"SPELL_INTERRUPT_SPELL",-- extraSpellID/name
+		"SPELL_INTERRUPT_SPELL",-- extraSpellID/name (fake event)
 
 
 	"CAT_MISC",
