@@ -89,6 +89,18 @@ L["CLEU_NOFILTERS"] 				  	= L["CLEU_NOFILTERS"]						:format(L["ICONMENU_CLEU"]
 L["CLEU_SPELL_DAMAGE_CRIT_DESC"]   	  	= L["CLEU_SPELL_DAMAGE_CRIT_DESC"]	 		:format(L["CLEU_SPELL_DAMAGE"])
 L["CLEU_SPELL_DAMAGE_NONCRIT_DESC"]    	= L["CLEU_SPELL_DAMAGE_NONCRIT_DESC"]		:format(L["CLEU_SPELL_DAMAGE"])
 
+
+
+L["CLEU_RANGE_DAMAGE_MULTISTRIKE"] 				= L["CLEU_RANGE_DAMAGE_MULTISTRIKE"]				:format(L["CLEU_RANGE_DAMAGE"])
+L["CLEU_SWING_DAMAGE_MULTISTRIKE_DESC"] 		= L["CLEU_SWING_DAMAGE_MULTISTRIKE_DESC"]			:format(L["CLEU_SWING_DAMAGE"])
+L["CLEU_SPELL_DAMAGE_MULTISTRIKE_DESC"] 		= L["CLEU_SPELL_DAMAGE_MULTISTRIKE_DESC"]			:format(L["CLEU_SPELL_DAMAGE"])
+L["CLEU_SPELL_PERIODIC_DAMAGE_MULTISTRIKE_DESC"]= L["CLEU_SPELL_PERIODIC_DAMAGE_MULTISTRIKE_DESC"]	:format(L["CLEU_SPELL_PERIODIC_DAMAGE"])
+L["CLEU_SPELL_HEAL_MULTISTRIKE_DESC"] 			= L["CLEU_SPELL_HEAL_MULTISTRIKE_DESC"]				:format(L["CLEU_SPELL_HEAL"])
+L["CLEU_SPELL_PERIODIC_HEAL_MULTISTRIKE_DESC"] 	= L["CLEU_SPELL_PERIODIC_HEAL_MULTISTRIKE_DESC"]	:format(L["CLEU_SPELL_PERIODIC_HEAL"])
+
+
+
+
 L["SOUND_CHANNEL_DESC"] 				= L["SOUND_CHANNEL_DESC"] 					:format(L["SOUND_CHANNEL_MASTER"])
 
 L["ANIM_INFINITE_DESC"] 				= L["ANIM_INFINITE_DESC"] 					:format(L["ANIM_ICONCLEAR"])
